static/sigmastyle.css
/* sigmastyle.css */


html, body {
	font-family: 'Open Sans', sans-serif;
	width: 100%; 
	min-height: 100%;}


body {
	display: flex; 
	margin: 0px 10px 0px 10px ;}

nav {}

main {
	margin: auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

}

table {table-layout: fixed;}

a {
	text-decoration: none; 
	color: grey;}

a:hover {
	background-color: lightgreen;
}


/* Rules for input.html*/
/* ------------------- */

.maindiv {
	width: 99%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.megainput {
	background-color: transparent;
	border: 0px solid; ;
	border-bottom: 1px solid grey;
	margin: 20px 0px 40px 0px;
	flex: 0 1 70px;
	width: 90%;
	font-size: 30px;
	text-align: center;
}

.metainfo {
	width: 100%;
	display: flex;
	justify-content: center;
}
.metainfo .kolonne1 {
	flex: 0 1 300px;
}
.metainfo .kolonne2 {
	flex: 0 1 200px;
	display:flex;
	flex-direction: column;
	align-items: center;
}

.linkholder {
	height: 30px;
	width: 30px;
}

.topicinput {
	text-align: center;
	font-size: 20px;
	font-weight: bold;
	flex: 1;
	width: 95%;
}

.plusicon {margin-left: 30px;}

.hidtopic {border: 0px;}

.mainrow {cursor: pointer !important; font-size: 20px;}

#domain {font-size: 20px; font-weight:bold;}

.endrebutton {width: 100px; height: 30px; margin-top: 10px;}



/* Rules for maps.html */
/* ------------------- */

ol.maps-list {
 	/* the list of maps. */
 	display:flex;
 	flex-wrap: wrap;
}

.maps-list li {
	display: inline-block;
	border: 1px solid black;
	border-radius: 2px;
	min-width: 120px;
	margin: 5px;
	padding: 5px;
	text-align: center;
}

.map-thumbnail h3 {
	/* main topic of map in the list of maps */
}

